 # Fixed bugs in module layout list parameter.
 ^ Menu changes based on Ron Severdia's suggestions added.
 # [#15509] JHTML::_() breaks on PHP 5.3.0 when calling methods which uses a reference in its argument list.
 # [#15813] PHP Notice During Installation
 # [#16527] JQuery class not imported in form/fields/accesslevels.php
 # [#16691] [patch] docblock typos in html.php

02-Jun-2009 Andrew Eddie
 - Deprecated JDatabase::stderr
 + [#16045] Added JDatabase::getNextRow, JDatabase::getNextObject

01-Jun-2009 Gergo Erdosi
 # Fixed editor and editors form fields.

01-Jun-2009 Andrew Eddie
 ^ Changed successful translation marker in JLanguage from &bull; to ** to avoid double escaping ugliness.
 + Added new configuration variable to enable (default) or disable the tp=1 feature.
 # [#17020] Refactoring com_login component: error on at the end of inactivity period.

27-Jun-2009 Gergo Erdosi
 ^ Updated SimplePie to version 1.1.3.
 - Removed sections search plugin.
 ^ Replaced emailcloak content plugin with its refactored version.
 ^ Replaced pagebreak content plugin with its refactored version.
 ^ Replaced pagenavigation content plugin with its refactored version.
 ^ Replaced vote content plugin with its refactored version.

26-Jun-2009 Gergo Erdosi
 ^ Replaced com_login with its refactored version.
 ! Thanks to Christophe Demko for helping refactor the com_login component.
 ^ Updated SVN properties on com_login.

25-Jun-2009 Gergo Erdosi
 ^ Merged 'com_newsfeeds' branch (Newsfeeds component refactoring).
 ! Thanks to Rob Clayburn for refactoring the com_newsfeeds component.

24-Jun-2009 Andrew Eddie
 ^ Deprecated JObject::toString, added JObject::__toString magic method.
 + Added PHP5 check to installation index.php.
 + Menus rebuild task now converts menu params to JSON format.
 + Added constructor to JObject to initialise the properties.
 + Added JObject::def with similar function to JParameter::def.

23-Jun-2009 Gergo Erdosi
 # Fixed weblink checkin method.